# Rust

./: README.md
lab2/src/: main.old.rs  main.rs
lab3/: package-lock.json  package.json
lab3/components/: ChechBox.jsx
lab3/components/svg/: icon.jsx
lab3/pages/: _app.js  index.js
lab3/rust/: Cargo.toml
lab3/rust/src/: main.rs
lab3/rust/tasks/: tasks.json
lab3/styles/: global.css
lab4/: .gitignore  package-lock.json  package.json
lab4/pages/: _app.js  chat.js  forgot-password.js  index.js  layout.js  login.js  register.js
lab4/rust/: Cargo.toml
lab4/rust/src/: main.rs
lab4/rust/uploads/: ТВ-13 Новотка Вікторія №6 лаб4.docx
lab4/styles/: global.css
