[package]
name = "chat-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = {version = "0.5.0-rc.3", features = ["json"]  }
actix-web = "4"
actix-cors = "0.6"
serde = {version = "1.0", features=["derive"]}
uuid = {version = "1.0", features=["serde", "v4"]}
chrono = {version = "0.4", features=["serde"]}
serde_json = "1.0"

[dev-dependencies]
rand = "0.8"